--- a/app/src/main/res/layout/activity_gym_member_registration.xml
+++ b/app/src/main/res/layout/activity_gym_member_registration.xml
@@ -3,35 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
-
+    android:layout_height="wrap_content"
+    tools:context=".view.GymMemberRegistrationActivity">
 
     <TextView
-        android:id="@+id/detailed_gym_member_details_textview"
+        android:id="@+id/register_gym_member_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/member_details_text"
+        tools:text="@string/register_gym_member_text"
         android:textSize="24sp"
         android:textAlignment="center"
         android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/main_recycle_view"
+        app:layout_constraintBottom_toTopOf="@id/gym_member_register_name_editview"
         />
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_recycle_view"
+    <EditText
+        android:id="@+id/gym_member_register_name_editview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/detailed_gym_member_details_textview"
+        android:hint="@string/register_gym_member_name_text"
+        app:layout_constraintTop_toBottomOf="@id/gym_member_register_plan_editview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/register_member_button"/>
+        app:layout_constraintBottom_toTopOf="@id/gym_member_register_plan_editview"/>
 
+    <EditText
+    android:id="@+id/gym_member_register_plan_editview"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:hint="@string/register_gym_member_plan_text"
+    app:layout_constraintTop_toBottomOf="@id/gym_member_register_name_editview"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/register_member_button"/>
 
     <Button
         android:id="@+id/register_member_button"
@@ -43,5 +52,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_recycle_view" />
+
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
