--- a/app/src/main/res/layout/activity_gym_member_registration.xml
+++ b/app/src/main/res/layout/activity_gym_member_registration.xml
@@ -10,15 +10,26 @@
         android:id="@+id/register_gym_member_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/gym_member_register_name_editview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/register_gym_member_text"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/register_gym_member_text" />
+
+    <!--<EditText
+        android:id="@+id/gym_member_register_userid_editview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="@string/enter_your_user_id_text"
         app:layout_constraintBottom_toTopOf="@id/gym_member_register_name_editview"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_gym_member_textview" />-->
+
 
     <EditText
         android:id="@+id/gym_member_register_name_editview"
@@ -26,21 +37,22 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="@string/register_gym_member_name_text"
-        app:layout_constraintTop_toBottomOf="@id/gym_member_register_plan_editview"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/gym_member_register_plan_editview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/gym_member_register_plan_editview"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_gym_member_textview" />
+
 
     <EditText
-    android:id="@+id/gym_member_register_plan_editview"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    android:hint="@string/register_gym_member_plan_text"
-    app:layout_constraintTop_toBottomOf="@id/gym_member_register_name_editview"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/register_member_button"/>
+        android:id="@+id/gym_member_register_plan_editview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="@string/register_gym_member_plan_text"
+        app:layout_constraintBottom_toTopOf="@+id/register_member_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gym_member_register_name_editview" />
 
     <Button
         android:id="@+id/register_member_button"
@@ -52,11 +64,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_recycle_view" />
-
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
