--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
 
     <TextView
-        android:id="@+id/detailed_gym_member_details_textview"
+        android:id="@+id/member_list_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="@string/member_details_text"
+        android:text="@string/active_member_list_text"
         android:textSize="24sp"
         android:textAlignment="center"
         android:layout_margin="16dp"
@@ -25,9 +25,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycle_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/detailed_gym_member_details_textview"
+        app:layout_constraintTop_toBottomOf="@id/member_list_textview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/register_member_button"/>
